# Detective-Case-Management

./: .gitignore  .pylintrc  README.md  main.py  profiling.py  pyproject.toml  requirements.txt
controllers/: TodoController.py
img/: .gitignore
models/: Todo.py  database.py
src/: main.py
src/controllers/: TodoController.py  calendar_controller.py  case_controller.py  suspect_controller.py  todo_controller.py  victim_controller.py
src/models/: case.py  case_suspect.py  case_victim.py  database.py  init_database.py  suspect.py  victim.py
src/routes/: destinations.py
src/views/: MainWindow.py  case_view.py  main_window.py  schedule_view.py  statistic_view.py  suspect_view.py  victim_view.py
tests/: conftest.py  test_calendar.py  test_case.py  test_suspect.py  test_victim.py
views/: MainWindow.py
